<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liquid</string>
    <string name="set_budget">Set Budget</string>
    <string name="add_expense">Add Expense</string>
    <string name="fragment_enter_date_title">Select monthly budget
        start date</string>
    <string name="activity_overview_add_expense">Add Expense</string>
    <string name="fragment_budget_today">Today</string>
    <string name="fragment_budget_spent">£670 Spent</string>
    <string name="fragment_budget_left">£990 Left</string>
    <string name="fragment_enter_date_enter">Enter</string>
    <string name="fragment_enter_money_title">Enter Expense Amount</string>
    <string name="fragment_enter_money_total">£0.00</string>
    <string name="fragment_enter_money_9">9</string>
    <string name="fragment_enter_money_8">8</string>
    <string name="fragment_enter_money_7">7</string>
    <string name="fragment_enter_money_6">6</string>
    <string name="fragment_enter_money_5">5</string>
    <string name="fragment_enter_money_4">4</string>
    <string name="fragment_enter_money_3">3</string>
    <string name="fragment_enter_money_2">2</string>
    <string name="fragment_enter_money_1">1</string>
    <string name="fragment_enter_money_0">0</string>
    <string name="fragment_enter_money_00">00</string>
    <string name="fragment_enter_money_delete">Del</string>
    <string name="fragment_enter_money_enter">Enter</string>
    <string name="fragment_expense_details_title">Expense Details</string>
    <string name="fragment_expense_details_amount_label">Amount:</string>
    <string name="fragment_expense_details_amount">£100</string>
    <string name="fragment_expense_details_amount_edit">Edit</string>
    <string name="fragment_expense_details_date_title">Date:</string>
    <string name="fragment_expense_details_date">12 December 2014</string>
    <string name="fragment_expense_details_date_edit">Edit</string>
    <string name="fragment_expense_details_delete">Delete Expense</string>
    <string name="listItem_expense_value">£10.00</string>
    <string name="listItem_expense_date">Yesterday</string>
    <string name="listItem_date_separator_default">11/12/1990</string>
    <string name="tab_title_budget">BUDGET</string>
    <string name="tab_title_expense">EXPENSE</string>

</resources>
