<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textColor="@color/blue_dark"
        android:textSize="32sp"
        android:text="@string/fragment_expense_details_title" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/fragment_expense_details_amount_label"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/expense_details_textView_expense_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fragment_expense_details_amount"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/medium" />

            <Button
                android:id="@+id/expense_details_button_edit_expense_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_expense_details_amount_edit"
                android:textSize="@dimen/medium" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:gravity="end"
                android:text="@string/fragment_expense_details_date_title"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/expense_details_textView_expense_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/fragment_expense_details_date"
                android:textColor="@color/blue_dark"
                android:textSize="@dimen/medium" />

            <Button
                android:id="@+id/expense_details_button_edit_expense_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_expense_details_date_edit"
                android:textSize="@dimen/medium" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/expense_details_button_delete_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/fragment_expense_details_delete"
        android:textSize="@dimen/small" />


</LinearLayout>